# becam

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md  build_windows_all.ps1  build_windows_any.ps1  build_windows_i686.ps1  build_windows_x86_64.ps1
cmake-toolchains/: gnu-linux-i686-toolchain.cmake  gnu-linux-x86_64-toolchain.cmake  linux-gnu-toolchain.cmake  linux-rockchip-toolchain.cmake  rockchip-linux-aarch64-toolchain.cmake  rockchip-linux-arm-toolchain.cmake  windows-mingw-toolchain.cmake
include/: README.md
include/becam/: becam.h
scripts/: build_android_all.sh  build_android_any.sh  build_linux_all.sh  build_linux_any.sh  build_linux_gnu_any.sh  build_linux_rockchip_any.sh  build_windows_all.ps1  build_windows_mingw_any.ps1  build_windows_mingw_i686.ps1  build_windows_mingw_x86_64.ps1  build_windows_msvc_any.ps1  build_windows_msvc_i686.ps1  build_windows_msvc_x86_64.ps1
src/becamdshow/: BecamAmMediaType.hpp  BecamDeviceEnum.cpp  BecamDeviceEnum.hpp  BecamDirectShow.cpp  BecamDirectShow.hpp  BecamEnumDevice.cpp  BecamEnumDevice.hpp  BecamMonikerPropReader.cpp  BecamMonikerPropReader.hpp  BecamOpenedDevice.cpp  BecamOpenedDevice.hpp  BecamSampleGrabberCallback.cpp  BecamSampleGrabberCallback.hpp  BecamStringConvert.hpp  CMakeLists.txt  CmakeLists.txt  DShowAmMediaType.hpp  MonikerPropReader.cpp  MonikerPropReader.hpp  SampleGrabberCallback.hpp  StringConvert.hpp  becam.cpp  becam.pc  becam_mingw.pc  becamdshow.cpp  becamdshow.h  moniker_prop_reader.cpp  string_convert.cpp
src/becammf/: AutoCOM.hpp  BecamMediaFoundation.cpp  BecamMediaFoundation.hpp  BecammfAttributesHelper.cpp  BecammfAttributesHelper.hpp  BecammfDeviceConfigHelper.cpp  BecammfDeviceConfigHelper.hpp  BecammfDeviceHelper.cpp  BecammfDeviceHelper.hpp  CMakeLists.txt  CmakeLists.txt  becam.cpp  becam.pc  becam_mingw.pc  becam_msvc.pc
src/becamuvc/: BecamUVC.cpp  BecamUVC.hpp  BecamuvcDeviceConfigHelper.cpp  BecamuvcDeviceConfigHelper.hpp  BecamuvcDeviceHelper.cpp  BecamuvcDeviceHelper.hpp  CMakeLists.txt  becam.cpp  becam.pc  becam_gnu.pc  becam_musl.pc
src/becamv4l2/: BecamV4L2.cpp  BecamV4L2.hpp  Becamv4l2DeviceConfigHelper.cpp  Becamv4l2DeviceConfigHelper.hpp  Becamv4l2DeviceHelper.cpp  Becamv4l2DeviceHelper.hpp  CMakeLists.txt  becam.cpp  becam.pc  becam_gnu.pc  becam_musl.pc  xioctl.hpp
src/directshow/: CmakeLists.txt  directshow.cpp  moniker_prop_reader.cpp
src/pkg/: LogOutput.hpp  SafeRelease.hpp  StringConvert.hpp
test/becamdshow/: CMakeLists.txt  CmakeLists.txt  becamdshow_all_test.cpp  becamdshow_frame_test.cpp  becamdshow_get_list_test.cpp  becamdshow_init_test.cpp  becamdshow_open_test.cpp  becamdshow_test.cpp
test/becammf/: CMakeLists.txt  CmakeLists.txt  becammf_test.cpp
test/becamv4l2/: CMakeLists.txt  CmakeLists.txt
test/common/: becam_all_test.cpp  becam_enum_devices_test.cpp  becam_frame_test.cpp  becam_get_list_test.cpp  becam_init_test.cpp  becam_open_test.cpp  becam_test.cpp  custom_printf.cpp
test/directshow/: directshow_test.cpp
